Added error handling

--- a/TicTacToe/TicTacToe.ipynb
+++ b/TicTacToe/TicTacToe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,10 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import clear_output\n",
     "def play_game():\n",
     "    \n",
     "    x = input(\"Ready to play Tic-Tac-Toe?(Y/n) : \")\n",
@@ -63,6 +64,7 @@
     "        moves = 0\n",
     "        while moves <= 8:\n",
     "            board = get_valid_input(board,player1_symbol,1)\n",
+    "            clear_output()\n",
     "            print(f' {board[1]} | {board[2]} | {board.get(3)} \\n-----------\\n {board.get(4)} | {board.get(5)} | {board.get(6)} \\n-----------\\n {board.get(7)} | {board.get(8)} | {board.get(9)} ')\n",
     "            resp = check_win(board)\n",
     "            if resp[\"win\"] == True :\n",
@@ -72,6 +74,7 @@
     "                    print(\"Player 2 wins!!\")\n",
     "                break\n",
     "            board = get_valid_input(board,player2_symbol,2)  \n",
+    "            clear_output()\n",
     "            print(f' {board[1]} | {board[2]} | {board.get(3)} \\n-----------\\n {board.get(4)} | {board.get(5)} | {board.get(6)} \\n-----------\\n {board.get(7)} | {board.get(8)} | {board.get(9)} ')\n",
     "            resp = check_win(board)\n",
     "            if resp[\"win\"] == True :\n",
@@ -86,15 +89,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_valid_input(board,player_symbol,player_num):\n",
-    "    y = int(input(f\"Player {player_num} enter the position of your {player_symbol}: \"))\n",
+    "    while True :\n",
+    "        try :\n",
+    "            y = int(input(f\"Player {player_num} enter the position of your {player_symbol} (1-9): \"))\n",
+    "            break\n",
+    "        except ValueError :\n",
+    "            print('Enter a value between 1 to 9')\n",
+    "            continue\n",
     "    chk = validate_move(board,y)\n",
     "    while chk == False : \n",
-    "        y = int(input(f\"Player {player_num} enter VALID position of your {player_symbol}: \"))\n",
+    "        while True :\n",
+    "            try :\n",
+    "                y = int(input(f\"Player {player_num} enter VALID position of your {player_symbol}(1-9): \"))\n",
+    "                break\n",
+    "            except ValueError :\n",
+    "                print('Enter a value between 1 to 9')\n",
+    "                continue\n",
     "        chk = validate_move(board,y) \n",
     "    else :\n",
     "        board[y] = player_symbol\n",
@@ -103,14 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def validate_move(board,pos):\n",
-    "    if board[pos] == \" \" :\n",
-    "        return True\n",
-    "    else:\n",
+    "    try : \n",
+    "        if board[pos] == \" \" :\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    except KeyError:\n",
     "        return False"
    ]
   },
